--- a/Employee.xaml
+++ b/Employee.xaml
@@ -13,12 +13,12 @@
         <Grid>
             <!--  DataGrid  -->
             <DataGrid
-            Margin="0,61,0,0"
+            Margin="0,61,0,45"
             AutoGenerateColumns="False"
             CanUserAddRows="False"
             HeadersVisibility="Column"
             IsReadOnly="True"
-            SelectionMode="Single">
+            SelectionMode="Single" BorderBrush="Black">
                 <DataGrid.Columns>
                     <DataGridTextColumn Width="100" Header="Employee ID" />
                     <DataGridTextColumn Width="120" Header="Name" />
@@ -32,10 +32,12 @@
 
                 </DataGrid.Columns>
             </DataGrid>
+            <Grid Grid.ColumnSpan="2" Height="45" VerticalAlignment="Bottom" Background="White">
+                <Button Content="Add New Employee" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.718,-0.081" Background="#FF065668" BorderBrush="#FF065668" Width="118" Foreground="White" Height="27"/>
+            </Grid>
         </Grid>
         <Grid Background="#FF065668" Height="61" VerticalAlignment="Top"/>
-        <Button Content="Add New Employee" HorizontalAlignment="Right" Margin="0,21,40,0" VerticalAlignment="Top" RenderTransformOrigin="0.718,-0.081" Background="White" BorderBrush="White" Width="118"/>
-        <TextBlock HorizontalAlignment="Left" Margin="24,13,0,0" TextWrapping="Wrap" Text="👨‍💼 Employee" VerticalAlignment="Top" Width="171" Foreground="White" Background="#FF065668"  FontSize="22" FontWeight="Bold" FontFamily="Cascadia Code"/>
+        <TextBlock HorizontalAlignment="Left" Margin="24,13,0,0" TextWrapping="Wrap" Text="👨‍💼 Employee" VerticalAlignment="Top" Width="171" Foreground="White" Background="#FF065668"  FontSize="22" FontWeight="Bold"/>
 
 
     </Grid>
